# divcomp

./: Cargo.toml  TODO  build.rs  pan-tadeusz.txt
src/: bit_vector.rs  byte_buffer.rs  byte_writer.rs  compress.rs  config.rs  decompress.rs  file_reader.rs  file_writer.rs  huffman_tree.rs  lib.rs  main.rs
src/archive/: archive.rs  archive_header.rs  directory_info.rs  extractor.rs  mod.rs  pack.rs
src/archive_stage/: archive.rs  archive_header.rs  directory_info.rs  extract.rs  mod.rs
src/compress/: compress.rs  decompress.rs  huffman.rs  huffman_decompressor.rs  huffman_tree.rs  lz77.rs  lz77_decompressor.rs  mod.rs
src/compress/huffman/: mod.rs  tree.rs
src/compress/lz77/: compression_window.rs  decompression_buffer.rs  mod.rs  window.rs
src/compress_stage/: bit_vector_writer.rs  compress.rs  decompress.rs  file_reader.rs  file_writer.rs  huffman_tree.rs  mod.rs
src/gui/: mod.rs  util.rs
src/io_utils/: bit_vector.rs  bit_vector_writer.rs  byte_buffer.rs  byte_writer.rs  mod.rs  path_utils.rs  universal_reader.rs
src/main_module/: config.rs  extractor.rs  mod.rs
test/: KOKOKOKOEE.txt  KOKOKOKOEEE.txt  KOKOKOKOEUROSPOKO.txt
tests/: compress_tests.rs
