[package]
name = "divcomp"
version = "0.23.0"
edition = "2021"

[dependencies]
walkdir = "2.5.0"
serde_json = "=1.0.1"
serde = { version = "1.0.204", features = ["derive"] }
rand = "0.9.0-alpha.1"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

