[package]
name = "divcomp"
version = "0.76.50"
edition = "2021"

[dependencies]
walkdir = "2.5.0"
serde_json = "=1.0.124"
serde = { version = "1.0.207", features = ["derive"] }
rand = "0.9.0-alpha.2"
sysinfo = "0.31.2"
eframe = "0.28.1"
env_logger = "0.11.5"
egui_extras = "0.28.1"
rfd = "0.14.1"

[build-dependencies]
embed-resource = "2.4.3"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce the number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

